--- a/src/Components/Profile/top-bar.css
+++ b/src/Components/Profile/top-bar.css
@@ -1,19 +1,16 @@
 /* TopBar.css */
 .top-bar {
-  width: 500%;
-  max-width: 50%; /* Ajusta este valor según el ancho deseado */
   height: 60px;
-  background-color: #2c3e50;
-  color: #ecf0f1;
-  position: fixed;
-  top: 0;
-  right: 0; /* Alinea la barra a la derecha */
-  display: flex;
-  justify-content: space-between;
+  display: flex; 
+  justify-content: space-between; 
   align-items: center;
   padding: 0 20px;
+  color:#000;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  width: calc(100% - 200px); /* Ajusta el ancho tomando en cuenta el sidebar */
+  top: 0;
   z-index: 1000;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Agrega una sombra sutil para un mejor aspecto */
 }
 
 .language-selector {
