--- a/src/Components/Profile/styles-sidebar.css
+++ b/src/Components/Profile/styles-sidebar.css
@@ -1,3 +1,4 @@
+
 :root {
   --background-gradient-start: #FBF8EF;
   --background-gradient-end: #E2E2E2;
@@ -11,7 +12,7 @@
 }
 
 
-/* Contenedor del menú lateral */
+
 .sidebar {
   width: 200px; 
   background: linear-gradient(135deg, var(--background-gradient-start),var(--background-gradient-end));
@@ -19,7 +20,6 @@
   height: 100vh;
 }
 
-/* Estilos de la lista del menú */
 .sidebar-menu {
   list-style-type: none; 
   padding: 0;
@@ -27,6 +27,15 @@
 }
 .sidebar-menu li {
   margin: 0; 
+
+  list-style-type: none; /* Quita los puntos de la lista */
+  padding: 0; /* Quita el padding por defecto */
+  margin: 0; /* Quita el margin por defecto */
+}
+
+.sidebar-menu li {
+  margin: 0; /* Quita el margin de los elementos de la lista */
+
 }
 
 .sidebar-menu li a {
@@ -44,4 +53,17 @@
 .sidebar-menu li a.active {
   background-color: #1abc9c; 
   color: white; 
+  padding: 15px; /* Espaciado alrededor del texto */
+  color: white; /* Color del texto del enlace */
+  text-decoration: none; /* Quita el subrayado de los enlaces */
+  transition: background-color 0.3s; /* Transición suave para el cambio de color de fondo */
+}
+
+.sidebar-menu li a:hover {
+  background-color: var(--border-color); /* Color de fondo al pasar el ratón sobre el enlace */
+}
+
+.sidebar-menu li a.active {
+  background-color: #1abc9c; /* Color de fondo para el enlace activo */
+  color: white; /* Color del texto para el enlace activo */
 }
